--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hello world
+
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bröllopsinbjudan</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f8f8;
+            color: #333;
+            padding: 20px;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: navy;
+        }
+        .date {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+        .location, .dresscode {
+            margin-top: 10px;
+            font-size: 1.1em;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Välkommen till vårt bröllop!</h1>
+        <p class="date">Datum: 26 april</p>
+        <p class="location">Plats: Ateljéns Pizzeria</p>
+        <p class="dresscode">Klädkod: Marinblå</p>
+        <p>Vi ser fram emot att fira denna speciella dag med er!</p>
+    </div>
+</body>
+</html>
