--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <p class="location">Plats: Ateljéns Pizzeria</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
+	<p>Scanna den här QR-koden för att komma tillbaka till den här hemsidan.</p>
+	<div class="qrcode">
+            <img src="qrcode.png" alt="QR-kod" width="200">
+        </div>
     </div>
 </body>
 </html>
