--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <h1>Välkommen till vårt bröllop!</h1>
         <p class="date">Datum: 26 april</p>
-        <p class="location">Plats: Ateljéns Pizzeria</p>
+        <p class="location">Start: Ateljéns Pizzeria 13:00</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
 	<p>Scanna den här QR-koden för att komma tillbaka till den här hemsidan.</p>
