--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
         <p class="location">Start: Ateljéns Pizzeria 13:00</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
-	<p>Scanna den här QR-koden för att komma tillbaka till den här hemsidan.</p>
+	<p>Scanna den här QR-koden för att öppna den här hemsidan.</p>
 	<div class="qrcode">
             <img src="qrcode.png" alt="QR-kod" width="200">
         </div>
+	<div class="imgs">
+	  	    <img src="plane.gif">
+
+	  </div>
     </div>
 </body>
 </html>
