--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -6,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bröllopsinbjudan</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+        
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Playfair Display', serif;
             text-align: center;
             background-color: #f8f8f8;
             color: #333;
@@ -32,23 +33,21 @@
             margin-top: 10px;
             font-size: 1.1em;
         }
+        .qrcode {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Välkommen till vårt bröllop!</h1>
         <p class="date">Datum: 26 april</p>
-        <p class="location">Start: Ateljéns Pizzeria 13:00</p>
+        <p class="location">Plats: Ateljéns Pizzeria</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
-	<p>Scanna den här QR-koden för att öppna den här hemsidan.</p>
-	<div class="qrcode">
+        <div class="qrcode">
             <img src="qrcode.png" alt="QR-kod" width="200">
         </div>
-	<div class="imgs">
-	  	    <img src="plane.gif">
-
-	  </div>
     </div>
 </body>
 </html>
