--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>Välkommen till vårt bröllop!</h1>
+        <h1>Välkommen till vårt bröllop! (Sam & co)</h1>
         <p class="date">Datum: 26 april</p>
         <p class="location">Plats: Ateljéns Pizzeria</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
+	<p>Scanna QR koden för att öppna den här hemsidan</p>
         <div class="qrcode">
             <img src="qrcode.png" alt="QR-kod" width="200">
         </div>
+	<p><a href="mailto:ciccifixar@gmail.com">Mail för frågor/OSA</a></p>
+	<p>MER INFO KOMMER SNART. </p>
     </div>
 </body>
 </html>
