--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
         <h1>Välkommen till vårt bröllop! (Sam & co)</h1>
         <p class="date">Datum: 26 april</p>
-        <p class="location">Plats: Ateljéns Pizzeria</p>
+        <p class="location">Start Ateljéns Pizzeria 13:00</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
 	<p>Scanna QR koden för att öppna den här hemsidan</p>
