--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Välkommen till vårt bröllop! (Sam & co)</h1>
-        <p class="date">Datum: 26 april</p>
+        <h1>Välkommen till ett bröllop</h1>
+        <p class="date">26 april</p>
         <p class="location">Start Ateljéns Pizzeria 13:00</p>
         <p class="dresscode">Klädkod: Marinblå</p>
         <p>Vi ser fram emot att fira denna speciella dag med er!</p>
@@ -50,7 +50,6 @@
             <img src="qrcode.png" alt="QR-kod" width="200">
         </div>
 	<p><a href="mailto:ciccifixar@gmail.com">Mail för frågor/OSA</a></p>
-	<p>MER INFO KOMMER SNART. </p>
     </div>
 </body>
 </html>
