--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <img src="qrcode.png" alt="QR-kod" width="200">
         </div>
 	<p><a href="mailto:ciccifixar@gmail.com">Mail för frågor/OSA</a></p>
+	<p>MER INFO KOMMER SNART, GÖR DET HÄR TILL ER STARTSIDA.</p>
     </div>
 </body>
 </html>
