--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
         </div>
         
         <p class="date">26 april 2025</p>
-        <p class="location">Vi ses ca 13:00 på Ateljéns Pizzeria</p>
-        <p class="location">Festen fortsätter efter det på lokal i Slakthusområdet</p>
+        <p class="location">Vi ses 12:30 på Hallvägen 5, 121 62 Johanneshov</p>
 	<p class="location">Inga barn, inga presenter</p>
 	<p class="dresscode">Marinblå klädsel</p>
         
